--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^16.0.3",
     "firebase": "^9.13.0",
     "react": "^18.2.0",
+    "react-datetime-picker": "^4.0.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
