--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "react": "^18.2.0",
     "react-datetime-picker": "^4.0.1",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-photo-view": "^1.2.2",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
