--- a/package.json
+++ b/package.json
@@ -3,20 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tanstack/react-query": "^4.16.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "daisyui": "^2.38.1",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "firebase": "^9.13.0",
     "react": "^18.2.0",
     "react-datetime-picker": "^4.0.1",
+    "react-day-picker": "^8.3.6",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
+    "react-loader-spinner": "^5.3.4",
     "react-photo-view": "^1.2.2",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.6",
     "react-toastify": "^9.1.1",
     "web-vitals": "^2.1.4"
   },
