--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "firebase": "^9.13.0",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-datetime-picker": "^4.0.1",
     "react-day-picker": "^8.3.6",
